Moved css classes to separate file

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <script src="scripts/physicsjs-full.js"></script>
     <script src="scripts/jquery.min.js"></script>
     <script src="scripts/pang.js"></script>
+    <link rel="stylesheet" href="styles/style.css">
 
 </head>
 
